--- a/web/templates/home.html
+++ b/web/templates/home.html
@@ -18,12 +18,9 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="/">Get Admin Profile</a>
         <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="/profile">Profile</a>
-            </li>
             {% if username %}
                 <li class="nav-item">
-                    <a class="nav-link" href="/report">Report</a>
+                    <a class="nav-link" href="/report">Share</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/logout">Logout</a>
