--- a/web/templates/report.html
+++ b/web/templates/report.html
@@ -18,12 +18,9 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="/">Get Admin Profile</a>
         <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="/profile">Profile</a>
-            </li>
             {% if username %}
                 <li class="nav-item">
-                    <a class="nav-link" href="/report">Report</a>
+                    <a class="nav-link" href="/report">Share</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/logout">Logout</a>
@@ -39,12 +36,11 @@
     <div class="container">
         <div class="row justify-content-center align-items-center" style="height:100vh">
             <div class="col-4">
-                <h2 class="text-center">Report Page</h2>
-                <p>you can only report url starts with chellenge host and port.</p>
+                <h2 class="text-center">Share Image</h2>
+                <p>you can only share jpg,png,svg,ico,jpeg,gif file</p>
                 <form method="POST" action="/report">
                     <div class="form-group">
-                        <label for="url">URL</label>
-                        <input type="url" class="form-control" id="url" name="url" required>
+                        <input type="file" class="form-control" id="file" name="file" required>
                     </div>
                     <button type="submit" class="btn btn-primary">Submit</button>
                 </form>
