--- a/web/templates/report.html
+++ b/web/templates/report.html
@@ -38,7 +38,7 @@
             <div class="col-4">
                 <h2 class="text-center">Share Image</h2>
                 <p>you can only share jpg,png,svg,ico,jpeg,gif file</p>
-                <form method="POST" action="/report">
+                <form method="POST" action="/report" enctype=multipart/form-data>
                     <div class="form-group">
                         <input type="file" class="form-control" id="file" name="file" required>
                     </div>
