--- a/web/templates/home.html
+++ b/web/templates/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>fakelog generate</title>
+    <title>ANIME meme Share!</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
@@ -16,7 +16,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="/">Get Admin Profile</a>
+        <a class="navbar-brand" href="/">ANIME meme share</a>
         <ul class="navbar-nav">
             {% if username %}
                 <li class="nav-item">
@@ -33,7 +33,7 @@
         </ul>
     </nav>
     <div class="container d-flex align-items-center justify-content-center flex-column">
-      <span>Try get flag at Admin username with frontend technique.</span>
+      <span>Click share to share your favorite anime meme with admin,if I think it's fun.I might put it in the front page!</span>
     </div>
 </body>
 </html>
