--- a/web/templates/report.html
+++ b/web/templates/report.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="/">Get Admin Profile</a>
+        <a class="navbar-brand" href="/">ANIME meme share</a>
         <ul class="navbar-nav">
             {% if username %}
                 <li class="nav-item">
