--- a/web/templates/home.html
+++ b/web/templates/home.html
@@ -33,7 +33,7 @@
         </ul>
     </nav>
     <div class="container d-flex align-items-center justify-content-center flex-column">
-      <span>Click share to share your favorite anime meme with admin,if I think it's fun.I might put it in the front page!</span>
+      <span>Share your favorite anime meme with admin,if I think it's funny.I might put it in the front page!</span>
     </div>
 </body>
 </html>
